// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders animation correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  collapsable={undefined}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#505256",
      "fontFamily": "SourceSansPro-Regular",
      "transform": Array [
        Object {
          "translateY": 0,
        },
      ],
    }
  }
>
  Hello
</Text>
`;

exports[`renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;

exports[`renders header font family correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "AmaticSC-Bold",
      },
      undefined,
    ]
  }
>
  hello
</Text>
`;

exports[`renders style correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  Hello
</Text>
`;
